# Krypotwaluty

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.tx
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/mysite/crypto/: admin.py  models.py  serializer.py  urls.py  views.py
backend/mysite/mysite/: settings.py  urls.py
backend/mysite/mysite/templates/: base.html  index.html
crypto-service/: Dockerfile  entrypoint.sh  requirements.txt
crypto-service/app/: fake_data.csv  main.py  make_prediction.py  selecting_from_db.py  test.py
deployment/requirements/: app.requirements.txt
email-sender/: Dockerfile  entrypoint.sh
email-sender/app/: main.py  process_email.py  send_sample_email.py
frontend-server/: .gitignore  Dockerfile  package-lock.json  package.json
postgres/: init.sql
src/Kryptowaluty/: apps.py  models.py  wraper.py
src/base/: .urls 2.py.icloud  .wsgi 2.py.icloud  settings.py  urls.py
src/base/templates/: index.html
