[tool.poetry]
name = "projekt-kryptowaluta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projekt_kryptowaluta"}]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
scrapy = "^2.7.1"
celery = "^5.2.7"
nuitka = "^1.2.7"
requests = "^2.28.1"
django-lifecycle = "^1.0.0"
django-smuggler = "^1.0.4"
django-import-export = "^3.0.2"


[tool.poetry.group.worker.dependencies]
django-celery-results = "^2.4.0"
django-celery-beat = "^2.4.0"
scrapy-fake-useragent = "^1.4.4"
scrapy-rotating-proxies = "^0.6.2"
flower = "^1.2.0"


[tool.poetry.group.test.dependencies]
faker = "^15.3.1"
coverage = "^6.5.0"
unittest-xml-reporting = "^3.2.0"
junitparser = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
poetry = "=1.3.1"
isort = "^5.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
